# uselessmath

./: .gitignore  LICENSE  README.md  build_requirements.txt  pyproject.toml  tox.ini
docs/: conf.py  index.rst  install.rst
src/uselessmath/: __init__.py  arith.py  exponents.py  uclass.py
tests/: test_arith.py  test_exponents.py  test_umath.py
